DevelopIII/IoT-Project assignment/IoT-Project-master/k8s/mqtt.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mqtt-guanchen-hou
  labels:
    name: assignment
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      component: mqtt
      student: guanchen-hou
  template:
    metadata:
      labels:
        component: mqtt
        student: guanchen-hou
    spec:
      containers:
        - name: mqtt
          image: guanchenhou/iot-home-server:demo35
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 20m
              memory: 64Mi
              ephemeral-storage: 128Mi
            requests:
              cpu: 20m
              memory: 64Mi
