DevelopIII/IoT-Project assignment/IoT-Project-master/k8s/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-guanchen-hou
  labels:
    name: assignment
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      component: server
      student: guanchen-hou
  template:
    metadata:
      labels:
        component: server
        student: guanchen-hou
    spec:
      containers:
        - name: server
          image: guanchenhou/iot-home-server:demo35
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: 20m
              memory: 64Mi
              ephemeral-storage: 64Mi
            requests:
              cpu: 20m
              memory: 64Mi
