DevelopIII/IoT-Project assignment/IoT-Project-master/k8s/cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-guanchen-hou
  labels:
    name: assignment
spec:
  type: ClusterIP
  selector:
    component: server
    student: guanchen-hou
  ports:
    - port: 3000
      targetPort: 3000
