DevelopIII/IoT-Project assignment/IoT-Project-master/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iot-home-guanchen-hou
  labels:
    name: WISE-PaaS
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: iot-home-guanchen-hou.assignment.esk004.en.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: server-guanchen-hou
                port:
                  number: 3000
